[package]
name = "halo2-liam-eagen-msm"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = 'c08b877793019d067a5ff2f221a59977fceef69d' }
halo2_common = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = 'c08b877793019d067a5ff2f221a59977fceef69d' }
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = 'c08b877793019d067a5ff2f221a59977fceef69d' }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git", rev = '59bf057b8f911d58b277aff33dac793d30d61116' }
subtle = { version = "2.3", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rayon-core = "1.11.0"

[dev-dependencies]

[features]
sanity-check = []
info = []
default = ["sanity-check"]
